<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".login.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/act3_imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:transitionName="logo_image"
            app:srcCompat="@drawable/img_signin"/>

        <TextView
            android:id="@+id/act3_txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act3_textTitle"
            android:textColor="@color/act_colorBlue"
            android:textSize="26sp"
            android:transitionName="logo_text"/>

        <TextView
            android:id="@+id/act3_txtSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/act3_textSubtitle"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:transitionName="logo_desc"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act3_hint_subField"
                    app:boxCornerRadiusBottomEnd="13dp"
                    app:boxCornerRadiusBottomStart="13dp"
                    app:boxCornerRadiusTopEnd="13dp"
                    app:boxCornerRadiusTopStart="13dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    app:endIconMode="clear_text"
                    app:helperText="@string/act3_helperText"
                    app:helperTextTextColor="@color/act_colorHelper2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:hint="Usuario"
                        android:inputType="text"
                        android:maxLength="25"
                        android:textSize="15sp"
                        android:transitionName="user_trans" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act3_hint_subField4"
                    app:boxCornerRadiusBottomEnd="13dp"
                    app:boxCornerRadiusBottomStart="13dp"
                    app:boxCornerRadiusTopEnd="13dp"
                    app:boxCornerRadiusTopStart="13dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    app:endIconMode="clear_text"
                    app:helperText="@string/act3_helperText2"
                    app:helperTextTextColor="@color/act_colorHelper">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:hint="Correo electrónico"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp"
                        android:transitionName="user_trans" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act3_hint_subField5"
                    app:boxCornerRadiusBottomEnd="13dp"
                    app:boxCornerRadiusBottomStart="13dp"
                    app:boxCornerRadiusTopEnd="13dp"
                    app:boxCornerRadiusTopStart="13dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/act3_helperText"
                    app:helperTextTextColor="@color/act_colorHelper2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:hint="Contraseña"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:transitionName="password_trans" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/act_colorBlue"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/act3_buttonRegistrar"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:transitionName="button_trans"
                    app:cornerRadius="13dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/act3_txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="right"
                    android:text="@string/act3_textView"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:transitionName="login_view"/>

                <TextView
                    android:id="@+id/signin_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="left"
                    android:text="@string/act3_textIniciar"
                    android:textColor="@color/act_colorBlue"
                    android:textSize="15sp"
                    android:transitionName="login_trans"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>