<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/act2_imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:transitionName="logo_image"
            app:srcCompat="@drawable/img_login"/>

        <TextView
            android:id="@+id/act2_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/act2_textTitle"
            android:textColor="@color/act_colorBlue"
            android:textSize="26sp"
            android:textStyle="bold"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/act2_txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/act2_textSubtitle"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:transitionName="logo_desc"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act2_txtField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act2_hint_subField"
                    app:boxCornerRadiusBottomEnd="13dp"
                    app:boxCornerRadiusBottomStart="13dp"
                    app:boxCornerRadiusTopEnd="13dp"
                    app:boxCornerRadiusTopStart="13dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/icon_user">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:maxLength="25"
                        android:textSize="15sp"
                        android:transitionName="user_trans" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act2_txtField2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act2_hint_subField2"
                    app:boxCornerRadiusBottomEnd="13dp"
                    app:boxCornerRadiusBottomStart="13dp"
                    app:boxCornerRadiusTopEnd="13dp"
                    app:boxCornerRadiusTopStart="13dp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/icon_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:textSize="15sp"
                        android:transitionName="password_trans" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/act2_txtOlvidar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/act2_textOlvidar"
                    android:textColor="@color/act_colorBlue"
                    android:textSize="15sp"/>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/act2_buttonIniciar"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:transitionName="button_trans"
                    app:cornerRadius="13dp"
                    android:backgroundTint="@color/act_colorBlue"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/act2_txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="right"
                    android:text="@string/act2_textView"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:transitionName="login_view"/>

                <TextView
                    android:id="@+id/login_btn_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/act2_textCrear"
                    android:textColor="@color/act_colorBlue"
                    android:textSize="15sp"
                    android:transitionName="login_trans"/>

            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>